; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_fill_oids_from_all_packs.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_fill_oids_from_all_packs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.write_commit_graph_context = type { i64, i64, i32, i64 }

@.str = private unnamed_addr constant [54 x i8] c"Finding commits for commit graph among packed objects\00", align 1
@add_packed_commits = common dso_local global i32 0, align 4
@FOR_EACH_OBJECT_PACK_ORDER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.write_commit_graph_context*)* @fill_oids_from_all_packs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_oids_from_all_packs(%struct.write_commit_graph_context* %0) #0 {
  %2 = alloca %struct.write_commit_graph_context*, align 8
  store %struct.write_commit_graph_context* %0, %struct.write_commit_graph_context** %2, align 8
  %3 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %4 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = call i32 @_(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %10 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @start_delayed_progress(i32 %8, i64 %11)
  %13 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %14 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 8
  br label %15

15:                                               ; preds = %7, %1
  %16 = load i32, i32* @add_packed_commits, align 4
  %17 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %18 = load i32, i32* @FOR_EACH_OBJECT_PACK_ORDER, align 4
  %19 = call i32 @for_each_packed_object(i32 %16, %struct.write_commit_graph_context* %17, i32 %18)
  %20 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %21 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %24 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp slt i64 %22, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %15
  %28 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %29 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %32 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @display_progress(i32 %30, i64 %33)
  br label %35

35:                                               ; preds = %27, %15
  %36 = load %struct.write_commit_graph_context*, %struct.write_commit_graph_context** %2, align 8
  %37 = getelementptr inbounds %struct.write_commit_graph_context, %struct.write_commit_graph_context* %36, i32 0, i32 2
  %38 = call i32 @stop_progress(i32* %37)
  ret void
}

declare dso_local i32 @start_delayed_progress(i32, i64) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @for_each_packed_object(i32, %struct.write_commit_graph_context*, i32) #1

declare dso_local i32 @display_progress(i32, i64) #1

declare dso_local i32 @stop_progress(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
